--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "jonthomann-portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "My Software Developer and UI/UX Design portfolio site",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Jonathan Thomann <jon.thomann30@gmail.com>",
   "dependencies": {
     "gatsby": "^2.13.64",
+    "gatsby-background-image": "^0.8.3",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.11",
     "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-source-strapi": "0.0.9",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
