--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
