--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Jonathan Thomann <jon.thomann30@gmail.com>",
   "dependencies": {
     "gatsby": "^2.13.64",
-    "gatsby-background-image": "^0.8.3",
+    "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
@@ -20,7 +20,9 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.11",
     "react-icons": "^3.7.0",
+    "react-sidebar": "^3.0.2",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
