--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "version": "0.1.0",
   "author": "Jonathan Thomann <jon.thomann30@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.1.2",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "core-js": "^3.2.1",
     "gatsby": "^2.13.64",
     "gatsby-background-image": "^0.8.4",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.5",
+    "gatsby-plugin-material-ui": "^2.1.5",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-source-strapi": "0.0.9",
     "gatsby-transformer-sharp": "^2.2.6",
+    "mdbreact": "^4.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -23,6 +31,7 @@
     "react-hot-loader": "^4.12.11",
     "react-icons": "^3.7.0",
     "react-sidebar": "^3.0.2",
+    "styled-components": "^4.3.2",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
