--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-source-strapi": "0.0.9",
     "gatsby-transformer-sharp": "^2.2.6",
-    "mdbreact": "^4.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.11",
     "react-icons": "^3.7.0",
-    "react-sidebar": "^3.0.2",
+    "react-motion": "^0.5.2",
+    "react-text-loop": "^2.0.2",
     "styled-components": "^4.3.2",
     "typescript": "^3.5.3"
   },
